--- a/client/UserManagementClient/src/app/user-list/user-list.component.html
+++ b/client/UserManagementClient/src/app/user-list/user-list.component.html
@@ -1,32 +1,24 @@
-<div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource">
-
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef>ID</th>
-      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="userName">
-      <th mat-header-cell *matHeaderCellDef>UserName</th>
-      <td mat-cell *matCellDef="let element">{{ element.userName }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef>Email</th>
-      <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+<div class="">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Name</th>
+        <th scope="col">Username</th>
+        <th scope="col">
+          UserGroup
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of users | async">
+        <th scope="row">{{ user.id }}</th>
+        <td>
+          {{ user.name }}
+        </td>
+        <td>{{ user.username }}</td>
+        <td>{{ user.userGroup }}</td>
+      </tr>
+    </tbody>
   </table>
-
-  <!-- <mat-paginator
-    [pageSizeOptions]="[5, 10, 20]"
-    showFirstLastButtons
-  ></mat-paginator> -->
 </div>
